<resources>
    <string name="app_name"> Namba Spy</string>
    <string name="title_activity_navigation">NambaSpy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="work_time">Рабочее время: </string>
    <string name="web_site_text">Веб-сайт: </string>
    <string name="phone_number">Номер телефона: </string>
    <string name="add_photo">Добавить фото</string>
    <string name="add_comment">Написать отзыв</string>
    <string name="android_studio">Джонни Депп</string>
    <string name="android_studio_android_com">nambaspy@gmail.com</string>
    <string name="my_comment">Мои отзывы</string>
    <string name="my_images">Мои фотографии</string>
    <string name="write_comment">Написать отзыв</string>
    <string name="setting">Настройке</string>
    <string name="lang_interface">Язык интерфейса</string>
    <string name="add_place">Добавить заведение</string>
    <string name="logout">Выход</string>
    <string name="userName">userName</string>
    <string name="searchHint">Поиск по названию заведение</string>
    <string name="chayhana">Чайхана</string>
    <string name="stolovy">Столовые</string>
    <string name="cafe">Кафе</string>
    <string name="pub">Бары</string>
    <string name="restoraunts">Рестораны</string>
    <string name="fastfood">Фастфуд</string>
    <string name="cofeyny">Кофейни</string>
    <string name="another">Другие</string>
    <string name="required_information">Обязательная информация</string>
    <string name="optional">Дополнительно (не обязательно)</string>
    <string name="title_another">Раздел в разработке</string>

    <string-array name="categoryList">
        <item>Кафе</item>
        <item>Бары</item>
        <item>Рестораны</item>
        <item>Кофейни</item>
        <item>Фастфуд</item>
        <item>Столовые</item>
        <item>Чайхана</item>
    </string-array>

    <string-array name="cityList">
        <item>Бишкек</item>
        <item>Ош</item>
        <item>Баткен</item>
        <item>Джалал-Абад</item>
        <item>Талас</item>
        <item>Нарын</item>
        <item>Каракол</item>
    </string-array>
</resources>
