<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <group android:id="@+id/nav_g1"
               android:checkableBehavior="single">
        <item
            android:id="@+id/nav_comment_marking"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/my_comment"
            />
            <item
            android:id="@+id/nav_images"
            app:actionViewClass="android.widget.TextView"
            android:title="@string/my_images" />
    </group>

    <group
        android:id="@+id/nav_g2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/write_comment"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/write_comment"/>
        <item
            android:id="@+id/add_place"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/add_place" />
        <item
            android:id="@+id/lang_interface"
            android:icon="@drawable/ic_language_black_24dp"
            android:title="@string/lang_interface" />
        <item
            android:id="@+id/menu_setting"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"
            />
    </group>
    </group>


</menu>
